--- a/src/app/releases/release.add.version.pug
+++ b/src/app/releases/release.add.version.pug
@@ -74,8 +74,8 @@ include ../template/_mixins
 			+icon('warning').shift-up.space-right
 			| There were errors while submitting your release. Please scroll up and fix the marked fields.
 		a.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: vm.game.id, releaseId: vm.release.id })") Cancel
-		button.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
-		button.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Submit
+		button#version-reset-btn.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
+		button#version-submit-btn.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="vm.submitting") Submit
 		.clearfix
 		p &nbsp;
 	.col-sm-3.col--menu
