feat(editor): Preserve given ID in textarea element.

--- a/src/app/core/editor.directive.pug
+++ b/src/app/core/editor.directive.pug
@@ -19,6 +19,7 @@ div(ng-class="{ media: !!user }")
 					.panel-triangle(ng-show="user")
 				textarea.textarea--full.animate(
 					placeholder="{{ $parent.$parent.placeholder }}",
+					ng-attr-id="{{::textareaId}}"
 					ng-model="$parent.$parent.text",
 					ng-trim="false",
 					msd-elastic,
