--- a/src/app/template/_mixins.pug
+++ b/src/app/template/_mixins.pug
@@ -1,5 +1,5 @@
 mixin icon(ref)
-	svg.svg-icon(class!=attributes.class, ng-click!=attributes['ng-click'], ng-show!=attributes['ng-show'],
+	svg.svg-icon(id!=attributes.id, class!=attributes.class, ng-click!=attributes['ng-click'], ng-show!=attributes['ng-show'],
 			ng-hide!=attributes['ng-hide'], ng-class!=attributes['ng-class'],
 			uib-tooltip!=attributes['uib-tooltip'], tooltip-append-to-body!=attributes['tooltip-append-to-body'],
 			tooltip-trigger!=attributes['tooltip-trigger'], tooltip-popup-delay!=attributes['tooltip-popup-delay']
