--- a/src/app/releases/release.edit.version.modal.pug
+++ b/src/app/releases/release.edit.version.modal.pug
@@ -1,6 +1,6 @@
 include ../template/_mixins
 
-.theme-light()
+.theme-light
 	.modal-header
 		h1.h--no-margin.h--small
 			+icon('ext').space-right
