--- a/src/app/releases/release.edit.version.modal.pug
+++ b/src/app/releases/release.edit.version.modal.pug
@@ -36,7 +36,7 @@ include ../template/_mixins
 
 		//- FILES
 		//-----------------------------------------
-		span(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
+		span#files(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 			h2.h--primary.h--smaller
 				+icon('{{ file.icon }}').svg-2x.shift-up.space-right-less
 				| {{ file.name }}
@@ -77,7 +77,7 @@ include ../template/_mixins
 			//-----------------------------------------
 			.row
 				//-- playfield image
-				.col-sm-6.playfield--rotate-on-upload(class="angle--{{ vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')].rotation }}")
+				.col-sm-6.playfield--rotate-on-upload.playfield-image(class="angle--{{ vm.meta.mediaLinks[vm.getMediaKey(file, 'playfield_image')].rotation }}")
 					span.pre-h4 Playfield
 					h4
 						| Screenshot
@@ -114,7 +114,7 @@ include ../template/_mixins
 										p Generating thumbnails...
 
 				//-- playfield video
-				.col-sm-6.playfield--rotate-on-upload(make-loaded="{ loaded: vm.getReleaseFile(file).flavor.orientation !== 'ws' }", make-loaded-event="video", make-loaded-post="loadingFinished")
+				.col-sm-6.playfield--rotate-on-upload.playfield-video(make-loaded="{ loaded: vm.getReleaseFile(file).flavor.orientation !== 'ws' }", make-loaded-event="video", make-loaded-post="loadingFinished")
 					span.pre-h4 Playfield
 					h4 Video
 
@@ -158,7 +158,7 @@ include ../template/_mixins
 										+icon('gear').svg-3x.svg-spin--slow
 										p Generating video thumbnail...
 
-			.alert.alert-danger(ng-show="vm.errors.files[vm.meta.files.indexOf(file)]._playfield_image")
+			.alert.alert-danger.media(ng-show="vm.errors.files[vm.meta.files.indexOf(file)]._playfield_image")
 				+icon('warning').shift-up.space-right
 				| {{ vm.errors.files[vm.meta.files.indexOf(file)]._playfield_image }}
 
