--- a/src/styles/dropdowns.styl
+++ b/src/styles/dropdowns.styl
@@ -91,11 +91,11 @@
 		border-bottom none
 
 .theme-light
-	.datepicker + .uib-dropdown-menu
+	.uib-datepicker-popup.dropdown-menu
 		*
 			outline none
 
-		[datepicker]
+		[uib-datepicker]
 
 			button.btn.btn-default
 				background none
@@ -117,8 +117,7 @@
 						fill $color-light-inv
 
 
-
-.datepicker + .dropdown-menu
+.uib-datepicker-popup.dropdown-menu
 
 	padding 10px
 	margin-top 0
@@ -130,7 +129,7 @@
 	.btn.btn-default .svg-icon
 		fill $color-lightish-inv
 
-	[datepicker]
+	[uib-datepicker]
 
 
 		button.btn.btn-default
