--- a/src/styles/dropdowns.styl
+++ b/src/styles/dropdowns.styl
@@ -108,7 +108,6 @@
 				.text-info
 					color $color-primary-dark
 
-
 			table thead > tr:first-child th
 				background-color $color-darker-inv
 				button.btn.btn-default
@@ -144,7 +143,6 @@
 				padding-left 15px
 			td:last-child, th:last-child
 				padding-right 30px
-
 
 	li
 		cursor default
@@ -196,3 +194,23 @@
 				color $color-lightest-inv
 				box-shadow none
 
+[uib-timepicker]
+	margin -36px 0
+	.btn.btn-link
+		background-color transparent
+		color $color-light-inv
+		.svg-icon
+			fill $color-light-inv
+		&:hover
+			color $color-lighter-inv
+			background-color transparent
+			.svg-icon
+				fill $color-lighter-inv
+
+	.uib-time > input
+		width: 55px
+
+	.uib-separator
+		position relative
+		left -1px
+		font-weight $font-weight-bold
