--- a/src/app/backglasses/backglass.add.pug
+++ b/src/app/backglasses/backglass.add.pug
@@ -64,7 +64,7 @@ include ../template/_mixins
 				.col-sm-3: .input-group
 					input.form-control.datepicker(
 						type="text",
-						ng-model="vm.meta.releaseDate",
+						ng-model="vm.backglass.versions[0].released_at",
 						ng-required="true",
 						uib-datepicker-popup="yyyy-MM-dd",
 						format-day-header="EE"
@@ -74,10 +74,8 @@ include ../template/_mixins
 						starting-day="1"
 					)
 					span.input-group-addon: +icon('calendar').a(ng-click="vm.openCalendar($event)")
-				.col-sm-2
-					uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="false")
-				.col-sm-7
-					i Leave empty for submission time.
+				.col-sm-3
+					div(uib-timepicker, ng-model="vm.backglass.versions[0].released_at", hour-step="1", minute-step="5", show-meridian="false")
 
 		div.alert.alert-danger.padder-bottom(ng-show="vm.errors.built_at")
 			+icon('warning').shift-up.space-right
