--- a/src/app/releases/release.add-04-release.notes.pug
+++ b/src/app/releases/release.add-04-release.notes.pug
@@ -14,7 +14,7 @@
 		.col-sm-3: .input-group
 			input.form-control.datepicker(
 				type="text",
-				ng-model="vm.meta.releaseDate",
+				ng-model="vm.releaseVersion.released_at",
 				uib-datepicker-popup="yyyy-MM-dd",
 				format-day-header="EE"
 				is-open="vm.calendarOpened",
@@ -24,10 +24,8 @@
 				ng-required
 			)
 			span.input-group-addon: +icon('calendar').a(ng-click='vm.openCalendar($event)')
-		.col-sm-2
-			uib-timepicker(ng-model="vm.meta.releaseTime", hour-step="1", minute-step="5", show-meridian="false")
-		.col-sm-7
-			i Leave empty for submission time.
+		.col-sm-3
+			div(uib-timepicker, ng-model="vm.releaseVersion.released_at", hour-step="1", minute-step="5", show-meridian="false")
 
 div.alert.alert-danger.padder-bottom(ng-show="vm.errors.built_at")
 	+icon('warning').shift-up.space-right
