--- a/src/styles/colors/badges.styl
+++ b/src/styles/colors/badges.styl
@@ -17,6 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '../variables';
+
 //
 // Dark theme
 // --------------------------------------------------
@@ -64,7 +66,7 @@
 		color $color-lightish
 		background-color #414141
 		&:before
-			background-image url("../static/images/tag-head-dark.svg")
+			background-image url('../../static/images/tag-head-dark.svg')
 
 	// The Top 10/100/300 badges
 	.top-badge
@@ -120,4 +122,4 @@
 	.badge--tag
 		background-color #b5b4b2
 		&:before
-			background-image url("../static/images/tag-head-light.svg")
+			background-image url('../../static/images/tag-head-light.svg')
