--- a/src/styles/colors/grid.styl
+++ b/src/styles/colors/grid.styl
@@ -17,6 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '../variables';
+
 //
 // Dark theme
 // --------------------------------------------------
@@ -58,7 +60,7 @@
 .theme-light
 
 	.container--topmost
-		background-image url('../static/images/background_white.png')
+		background-image url('../../static/images/background_white.png')
 		box-shadow 0 0 5px 1px rgba(black, 0.1)
 
 	.col--menu
