--- a/src/styles/colors/modals.styl
+++ b/src/styles/colors/modals.styl
@@ -17,11 +17,13 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '../variables';
+
 .modal-dialog
 	box-shadow 0 5px 15px $color-dark-inv
 
 .modal-content
-	background-image url('../static/images/background_white.png')
+	background-image url('../../static/images/background_white.png')
 	box-shadow none
 
 .modal-header
