--- a/src/styles/jumbotron.styl
+++ b/src/styles/jumbotron.styl
@@ -17,9 +17,11 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
 
 .container .jumbotron
-	background-image url("../static/images/background_blurred.jpg")
+	background-image url('../static/images/background_blurred.jpg')
 	background-size cover
 	background-position center top
 	margin-top -70px
