--- a/src/styles/colors/dropdowns.styl
+++ b/src/styles/colors/dropdowns.styl
@@ -17,6 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '../variables';
+
 //
 // Dark theme
 // --------------------------------------------------
@@ -52,7 +54,7 @@
 
 	// Non-navbar (light)
 	.uib-dropdown-menu
-		background-image url('../static/images/background_white.png')
+		background-image url('../../static/images/background_white.png')
 		box-shadow 0 3px 2px rgba(0, 0, 0, 0.07)
 		border-left-color $color-darkest-inv
 		border-right-color $color-darkest-inv
