--- a/src/styles/colors/tooltips.styl
+++ b/src/styles/colors/tooltips.styl
@@ -17,6 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '../variables';
+
 $color-tooltip-bg-dark = rgba(16, 16, 16, 0.9);
 
 //
