--- a/src/styles/flipbox.styl
+++ b/src/styles/flipbox.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 // :flip panel http://aerotwist.com/tutorials/protip-nobody-expects-3d/
 $flipbox-translateY = -2px
 $flipbox-shadow-color = rgba(0,0,0,0.3)
