--- a/src/styles/fonts.styl
+++ b/src/styles/fonts.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 @font-face {
 	font-family: 'langdon';
 	src: url('../static/fonts/langdon-webfont.eot');
