--- a/src/styles/icons.styl
+++ b/src/styles/icons.styl
@@ -17,6 +17,8 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
 
 .svg-icon
 	height 24px
