--- a/src/styles/notifications.styl
+++ b/src/styles/notifications.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 growl-notification
 	position fixed
 	padding-left 20px
