--- a/src/styles/ratings.styl
+++ b/src/styles/ratings.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 // Ratings
 //
 // Styleguide 15
