--- a/src/styles/scaffolding.styl
+++ b/src/styles/scaffolding.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 // Scaffolding
 //
 // Global styles that don't fit in any component or category.
