--- a/src/styles/tooltips.styl
+++ b/src/styles/tooltips.styl
@@ -17,6 +17,9 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import 'variables';
+@import 'mixins';
+
 // Tooltips
 //
 // Below are different text styles used on VPDB.
