--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -17,10 +17,11 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 
+@import '~nib/index';
+
 //
 // Variables
 // --------------------------------------------------
-
 
 //== Typography
 //
