--- a/src/app/releases/release.add-07-upload.media.pug
+++ b/src/app/releases/release.add-07-upload.media.pug
@@ -23,7 +23,7 @@ span#media(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 
 			//- drop zone
 			.panel.panel--blank.playfield--image(
-				id="playfield-image-{{ $index }}-upload",
+				id="playfield-image-{{ file.storage.id }}-upload",
 				file-upload="{ controller: vm, type: 'playfield', key: vm.getMediaKey(file, 'playfield_image'), status: vm.meta.mediaFiles, onSuccess: vm.onMediaUpload, onClear: vm.onMediaClear, allowedExtensions: ['jpg', 'png'], allowMultipleFiles: false }",
 				ngf-drag-over-class="'panel--dragging'",
 				ng-class="{ error: vm.errors.versions[0].files[vm.meta.files.indexOf(file)]._playfield_image }"
@@ -54,7 +54,7 @@ span#media(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 			h4.h--large Video
 
 			.panel.panel--blank.playfield--video(
-				id="playfield-video-{{ $index }}-upload",
+				id="playfield-video-{{ file.storage.id }}-upload",
 				file-upload="{ controller: vm, type: vm.getPlayfieldType(file), key: vm.getMediaKey(file, 'playfield_video'), status: vm.meta.mediaFiles, onSuccess: vm.onMediaUpload, onClear: vm.onMediaClear, allowedExtensions: ['flv', 'f4v', 'mp4', 'avi'], allowMultipleFiles: false, disableSelect: true }",
 				ngf-drag-over-class="'panel--dragging'",
 				ng-class="{ error: vm.errors.versions[0].files[vm.meta.files.indexOf(file)]._playfield_video }",
@@ -67,7 +67,7 @@ span#media(ng-repeat="file in vm.meta.files | fileext:['vpt','vpx']")
 
 			//- drop zone
 			.panel.panel--blank.playfield--image(
-				id="playfield-video2-{{ $index }}-upload",
+				id="playfield-video2-{{ file.storage.id }}-upload",
 				file-upload="{ controller: vm, type: vm.getPlayfieldType(file), key: vm.getMediaKey(file, 'playfield_video'), status: vm.meta.mediaFiles, onSuccess: vm.onMediaUpload, onClear: vm.onMediaClear, allowedExtensions: ['flv', 'f4v', 'mp4', 'avi'], allowMultipleFiles: false }",
 				ngf-drag-over-class="'panel--dragging'",
 				ng-class="{ error: vm.errors.versions[0].files[vm.meta.files.indexOf(file)]._playfield_video }",
