--- a/src/app/releases/release.edit.pug
+++ b/src/app/releases/release.edit.pug
@@ -147,7 +147,7 @@ include ../template/_mixins
 		.alert.alert-danger.alert--inverted.padder-bottom(ng-show="vm.error")
 			+icon('warning').shift-up.space-right
 			| {{ error }}
-		a.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: vm.game.id, releaseId: vm.release.id })") Cancel
+		a#release-cancel-btn.btn.btn-hollow.btn-lg.space-right(ui-sref="releaseDetails({ id: vm.game.id, releaseId: vm.release.id })") Cancel
 		button#release-reset-btn.btn.btn-default.btn-lg(ng-click="vm.reset()") Reset
 		button#release-submit-btn.btn.btn-primary.btn-lg.pull-right(ng-click="vm.submit()", ng-disabled="!vm.AuthService.isAuthenticated") Update
 		.clearfix
