feat(release-details): Add picture to 404s.

--- a/src/styles/images.styl
+++ b/src/styles/images.styl
@@ -214,3 +214,9 @@
 
 [uib-carousel] a.image img
 	width 100%
+
+
+// Pinball destruction (404 no release)
+img.pinball-destruct
+	margin 20px 0 0
+	width 500px
