--- a/src/app/releases/release.details.pug
+++ b/src/app/releases/release.details.pug
@@ -8,7 +8,7 @@ p.padder-top(ng-show="vm.pageLoading")
 
 	//-- RIGHT COLUMN
 	//-====================================================================
-	.col-sm-4.col-md-3.col-sm-push-8.col-md-push-9.col--menu(ng-show="vm.found")
+	.col-sm-4.col-md-3.col-sm-push-8.col-md-push-9.col--menu(ng-if="vm.found")
 
 		a.a--block.text-center(ui-sref="gameDetails({id: vm.game.id})")
 			img.img--logo(ng-src="{{ vm.App.img(vm.game.logo, 'medium') }}").padder-bottom
@@ -80,9 +80,9 @@ p.padder-top(ng-show="vm.pageLoading")
 						+icon('pencil-circle').space-right.shift-up
 						| Edit Release
 					li(ng-hide="vm.release.moderation && !vm.release.moderation.is_approved")
-						input#showModeration.checkbox--toggle(type='checkbox', ng-model="vm.showModeration")
-						label(for="showModeration")
-						label.a.a--light(for="showModeration") Show Moderation
+						input#show-moderation.checkbox--toggle(type='checkbox', ng-model="vm.showModeration")
+						label(for="show-moderation")
+						label.a.a--light(for="show-moderation") Show Moderation
 
 			p.padder-top
 
@@ -260,8 +260,9 @@ p.padder-top(ng-show="vm.pageLoading")
 		.clearfix
 		p.padder-bottom-2x
 
-	.padder-top.space-left-2x(ng-show="!vm.found && !vm.pageLoading")
-		p Sorry, no such release found.
-		p(ng-show="!vm.AuthService.isAuthenticated") If you're looking for a moderated release, try logging in.
+	.padder-top.space-left-2x.text-center(ng-show="!vm.found && !vm.pageLoading")
+		img.pinball-destruct(ng-src="{{ vm.imgPinDestruct }}")
+		p Whoops, that release doesn't exist!
+		p.padder-bottom-2x(ng-show="!vm.AuthService.isAuthenticated") If you're looking for a moderated release, try logging in.
 
 	jsonld(json="vm.ldRelease")
