--- a/src/app/releases/release.details.pug
+++ b/src/app/releases/release.details.pug
@@ -252,7 +252,7 @@ p.padder-top(ng-show="vm.pageLoading")
 
 		//-- NEW COMMENT
 		//---------------------------------------------------------------------
-		div(ng-show="vm.AuthService.hasPermission('comments/add')")
+		div(ng-show="vm.AuthService.hasPermission('comments/add') && (!vm.release.moderation || vm.release.moderation.is_approved)")
 			h3.h--smaller.h--primary Add a Comment:
 			editor#new-comment(ng-model="vm.newComment", user="vm.AuthService.user", placeholder="Your comment", markdown-text="Comments are parsed with Markdown.")
 			button.btn.btn-default.padder-top.pull-right(ng-click="vm.addComment(vm.release.id)") Comment
